# rmote

./: Makefile  README.md  example_local.py  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: Makefile  concepts.md  conf.py  index.md  multi-host.md  quickstart.md  templating.md  writing-tools.md
docs/_static/: custom.css
docs/api/: index.rst  protocol.rst
docs/api/tools/: apt.rst  apt_repository.rst  exec.rst  filesystem.rst  index.rst  logger.rst  pacman.rst  pacman_repository.rst  quit.rst  service.rst  template.rst  user.rst
rmote/: protocol.py
rmote/tools/: __init__.py  apt.py  apt_repository.py  exec.py  fs.py  logger.py  pacman.py  pacman_repository.py  quit.py  service.py  template.py  user.py
tests/: conftest.py  test_protocol.py  test_protocol_advanced.py  test_protocol_errors.py  test_protocol_lowlevel.py  test_stdio_protection.py  test_template.py  test_tool_metaclass.py  test_typing.yml
tests/tools/: conftest.py  test_apt.py  test_apt_repository.py  test_exec.py  test_fs.py  test_integration.py  test_logger.py  test_pacman.py  test_pacman_repository.py  test_service.py  test_template.py  test_user.py
tests/tools/docker/archlinux/: Dockerfile
tests/tools_cases/: async_tool.py  config_tool.py  custom_class.py  failure.py  inheritance.py  json_tool.py  math_tool.py  module_enum.py  nested_dataclass.py  nested_enum.py  same_name_a.py  same_name_b.py  simple.py  user_lookup.py
